New: ([D2R-]~ 46-91) AsciiArt_91 && ([D2R]~ 46-92) AsciiArt_92